force-app/main/default/objects/LOD_FFA_Transaction__c/LOD_FFA_Transaction__c.object-meta.xml
<CustomObject>
    <label>LOD FFA Transaction</label>
    <nameField>
        <displayFormat>LODFFATRN{000000}</displayFormat>
        <label>LOD FFA Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOD FFA Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>