force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOD FFA Transactions</relationshipLabel>
    <relationshipName>LOD_FFA_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>