force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Account_Outstanding_Total__c.field-meta.xml
<CustomField>
    <fullName>Account_Outstanding_Total__c</fullName>
    <label>Account Outstanding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>