force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Create_Journal__c.field-meta.xml
<CustomField>
    <fullName>Create_Journal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Journal</label>
    <type>Checkbox</type>
</CustomField>