force-app/main/default/objects/LOD_FFA_Transaction__c/fields/DocumentDescription__c.field-meta.xml
<CustomField>
    <fullName>DocumentDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Description</label>
    <type>TextArea</type>
</CustomField>