force-app/main/default/objects/LOD_FFA_Transaction__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>