force-app/main/default/objects/LOD_FFA_Transaction__c/fields/DocumentReference2__c.field-meta.xml
<CustomField>
    <fullName>DocumentReference2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Reference 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>