force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Home_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>Home_Value_Total__c</fullName>
    <label>Home Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>