force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Journal_Created__c.field-meta.xml
<CustomField>
    <fullName>Journal_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Journal Created</label>
    <type>Checkbox</type>
</CustomField>