force-app/main/default/objects/LOD_FFA_Transaction__c/fields/Original_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Transaction_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Transaction Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>